kubernetes/svc-kubia-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-kubia
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
#    nodePort: 30180
  selector:
    app: kubia
